54tt_backend/public/views/tp/css/tp-m.less
.search_bar {
  border: solid 1px #AEAEAE;
  width: 80%;
  height: 40px;
  text-align: center;
  margin: 10px 0% 10px 0%;
  float: left;
}
.search_btn {
  height: 40px;
  width: 20%;
  float: left;
  text-align: center;
  line-height: 3;
  background-color: palevioletred;
  cursor: pointer;
  margin: 10px 0% 10px 0%;
}
.sponsors_title {
  color: darkgrey;
  width: 100%;
  height: 50px;
  font-size: 12px;
}
.sponsors {
  width: 100%;
  margin-bottom: 10px;
  float: left;
  .sponsor {
    img {
      width: 60px;
      height: 60px;
    }
    .sponsor_categories {
      height: 35px;
      border: 1px solid red;
      text-align: center;
      min-width: 60px;
      float: left;
      margin-right: 8px;
      line-height: 2;
      background-color: palevioletred;
      color: white;
      cursor: pointer;
    }
  }
}
.terms {
  float: left; width: 100%; color: lightgrey; font-size: 12px; margin-bottom: 15px;
}
.trip_list {
  margin: 5px 2% 0px 2%;
  min-height: 800px;
  display: block;
}
.header {height: 40px;}
.add_trip {
  font-size: 24px;
  color: #AEAEAE;
  width: 60px;
  float: right;
  text-align: center;
}
.trip {min-height: 180px;cursor: pointer; float: left;}
.trip_image {
  border: solid 1px #AEAEAE;
  height: 35px;
  width: 35px;
  border-radius: 50%;
  float: left;
}
.trip_info {
  float: left;
  margin: 0px 5px 0px 5px;
  font-size: 12px;
  color: #AEAEAE;
}
.trip_info_follow {
  float: right;
  margin-left: 20px;
  padding: 2px;
  border: solid 1px green;
  color: cadetblue;
}
.trip_follow_btn {
  height: 20px;
  width: 40px;
  margin: 5px;
  float: right;
  font-size: 11px;
  padding: 0px;
  line-height: 1.7em;
  opacity: 0.6;
  background-color: red;
  color: white;
}
.trip_header {float: left;width: 100%;}
.trip_main_title {
  font-size: 14px;
  width: 50%;
  float: left;
  text {color: #AEAEAE;}
}
.trip_main_price {
  height: 25px;
  width: 50%;
  float: left;
  .trip_main_price_l {
    float: left;
    font-size: 10px;
    margin-left: 10px;
    span {font-size: 18px;}
  }
  .trip_main_price_r {
    font-size: 14px;
    color: gainsboro;
    float: right;
  }
}
.trip_main_com {
  font-size: 14px;
  color: lightcoral;
  float: left;
  width: 50%;
  height: 60px;
}
.trip_main_purchase {
  text-align: center;
  font-size: 16px;
  margin-bottom: 10px;
  float: right;
  text-decoration: underline;
  span {color: red;}
}
.trip_main_source{
  text-align: center;
  .trip_main_source_o {
    color: gainsboro;
    float: left;
    img {width: 25px;}
  }
}
.trip_main_source {text-align: center;}
.trip_main_copy {
  color: darkgrey;
  float: left;
  margin-left: 5px;
  line-height: 2;
}
.trip_main_share {
  width: 100%;
  color: orangered;
  padding: 10px;
  border: 1px solid red;
}
.trip_main_desc {
  font-size: 12px;
  max-height: 100px;
  margin: 5px 0px 5px 0px;
}
.trip_main_images {
  margin-top: 5px;
  width: 50%;
  height: 180px;
  float: left;
}
.trip_main_images_image {height: 85px;float: left;}
.the_end {
  height: 200px;
  text-align: center;
  border-top: solid 1px #AEAEAE;
  margin-top: 50px;
  padding-top: 10px;
  color: #AEAEAE;
  width: 100%;
  float: left;
}
.t_like {
  float: left;
  margin-top: 10px;
  margin-right: 30px;
  color: #AEAEAE;
  font-size: 12px;
  img {
    width: 15px;
    height: 15px;
    opacity: 0.6;
  }
}
.t_comment {
  float: left;
  margin-top: 10px;
  margin-right: 30px;
  color: #AEAEAE;
  font-size: 12px;
  img {
    opacity: 0.6;
    width: 15px;
    height: 15px;
  }
}

